--- a/v2/demo/app.yaml
+++ b/v2/demo/app.yaml
@@ -12,6 +12,7 @@ env_variables:
   PROJECT_ID: 'gallery-67d5b'
   SECRET_PATH: 'secret/client_secret.json'
   TEST_HOST: 'https://dddev.ngrok.io'
+  SCOPES: 'email,https://www.googleapis.com/auth/calendar.events.readonly'
 
 inbound_services:
 - warmup
